# coin-clicker

./: .gitignore  README.md  main.py  pyproject.toml
coin_clicker/: __main__.py  settings.py
tests/: test_coin_clicker.py
