[tool.poetry]
name = "coin-clicker"
version = "0.1.0"
description = ""
authors = ["lee <lee@logicon.io>"]

[tool.poetry.dependencies]
python = "^3.8"
webdriver-manager = "^3.2.2"
selenium = "^3.141.0"
asyncio = "^3.4.3"
Telethon = "^1.18.2"
PyInquirer = "^1.0.3"
pyfiglet = "^0.8.post1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
